crates/xifty-cli/tests/snapshots/cli_contract__extract_happy_png_report.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "extract_json(\"happy.png\", ViewMode::Report)"
---
{
  "input": {
    "container": "png",
    "detected_format": "png",
    "path": "happy.png"
  },
  "report": {
    "conflicts": [],
    "issues": []
  },
  "schema_version": "0.1.0"
}
